--- a/layout.css
+++ b/layout.css
@@ -1,8 +1,19 @@
+
+
+
 label input {
-  vertical-align: right;
- 
+  vertical-align: right; /* align the label and inputs to the right */
 }
 
-body {
-  background-color: black;
+
+/* add padding to each input */
+input {
+  padding: 1.2em;
+}
+
+/* put details and address side by side */
+
+#details { 
+float: right;
+margin-left: -10;
 }
