--- a/layout.css
+++ b/layout.css
@@ -27,6 +27,15 @@ margin-right: 3px;
 #wrapper {
   width: 50%;
   margin: 0 auto;
-  
+}
 
+ul {
+  text-align: left;
+  list-style-type: none;
+  
+}
+
+nav #foodar_logo {
+  display: inline-block;
+  
 }
